<resources>
    <string name="app_name">TicTacToesVx</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="go_register">No account? Register</string>
    <string name="go_login">Already have an account? Login</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_user">Welcome, %1$s</string>
    <string name="open_game">Open Game</string>
    <string name="open_friends">Open Friends</string>
    <string name="open_invitations">Open Invitations</string>
    <string name="logout">Logout</string>
    <string name="start_match">Start Match</string>
    <string name="resign">Resign</string>
    <string name="game_idle">Start a match to begin</string>
    <string name="game_status">status=%1$s | next=%2$s | winner=%3$s</string>
    <string name="search_username">Search username</string>
    <string name="search_users">Search Users</string>
    <string name="send_request">Send Friend Request</string>
    <string name="load_requests">Load Incoming Requests</string>
    <string name="request_id_hint">Request ID</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="load_friends">Load Friends</string>
    <string name="load_invitations">Load Invitations</string>
    <string name="invitation_id_hint">Invitation ID</string>
    <string name="empty_state">No data</string>
</resources>
