<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnOpenGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_game" />

    <Button
        android:id="@+id/btnOpenFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_friends" />

    <Button
        android:id="@+id/btnOpenInvitations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_invitations" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />
</LinearLayout>
