<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <Spinner
        android:id="@+id/spinnerMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerBoardSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnStartMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_match" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBoard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvGameStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_idle" />

    <Button
        android:id="@+id/btnResign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resign" />
</LinearLayout>
